--- a/GroupProject.csproj
+++ b/GroupProject.csproj
@@ -19,8 +19,8 @@
     <Folder Include="Models\" />
     <Folder Include="Entities\" />
     <Folder Include="Enums\" />
+    <Folder Include="Repositories\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Views\" />
   </ItemGroup>
 
 </Project>
